tests/bad/MissingDefinition.ml
module type Sig = sig
  val z : int
end

module MSig : Sig = struct end
